--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body {
     font-family: "Inter", sans-serif; 
     background: black;
     position: relative;
+    max-width: 100%;
 }
 
 /* navbar style start here */
@@ -44,6 +45,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 47px;
+    cursor: pointer;
 }
 .btn-primary{
     width: 92px;
@@ -56,6 +58,7 @@ body {
     font-size: 18px;
     font-weight: 600;
     font-family: inter;
+    cursor: pointer;
 }
 .nav-options p {
     color: rgb(255, 255, 255);
@@ -90,8 +93,7 @@ body {
     font-weight: 400;
     font-size: 78px;
     font-style: italic;
-    line-height: 0;
-    
+    line-height: 0; 
 }
 .banner-container p {
     color: rgba(255, 255, 255, 0.5);
@@ -99,6 +101,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     margin-top: 28px;
+    letter-spacing: 0.5px;
 }
 .banner-container button {
     width: 224px;
@@ -114,6 +117,7 @@ body {
 .banner-btn-1 {
     color: rgb(255, 255, 255);
     background: rgb(230, 83, 60);
+    border: none;
 }
 .banner-btn-2 {
     color: rgb(255, 255, 255);
@@ -127,7 +131,7 @@ body {
 .banner-img {
     width: 349px;
     height: 580px;
-    margin-right: 25px ;
+    margin-right: 25px;
 }
 
 .Workout-videos {
@@ -216,4 +220,135 @@ body {
     margin-left: 15px;
     letter-spacing: 0.5px;
     margin-bottom: 10px;
+}
+.ham-burger {
+    color: #ffffff;
+    display: none;
+}
+
+/* Responsive design */
+@media screen and (max-width: 576px) {
+    body {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+    .ham-burger {
+        display: block;
+    }
+    .nav-container {
+        width: 90%;
+        margin-left: 0px;
+        padding: 0 23px;
+    }
+    .nav-options {
+        display: none;
+    }
+    .header-section {
+        width: 100%;
+        height: 1024px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .banner-text-content {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .banner-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 0;
+        position: relative;
+        margin-left: 0px;
+        margin-left: 0px;
+    }
+    .banner-container h1 {
+        font-size: 36px;
+        font-weight: 900;
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: 23px;
+    }
+    .banner-container p {
+        width: 360px;
+        margin-left: 23px
+    }
+    .shape {
+        font-weight: 400;
+        font-size: 36px;
+    }
+    .banner-btn {
+        width: 92%;
+        display: flex;
+        font-size: 10px;
+        margin-right: 0px;
+        margin-left: 23px
+    }
+    .banner-container button {
+        max-width: 100%;
+        min-width: none;
+        font-size: 13px;
+    }
+    .banner-img {
+        width: 353px;
+        margin-left: 0 auto;
+        margin-right: 0px;
+    }
+    .Workout-videos {
+        width: 145.91px;
+        height: 74.09px;
+        border: 0.76px solid rgba(255, 255, 255, 0.1);
+        border-radius: 09.7px;
+        backdrop-filter: blur(15.12px);
+        left: 260px;
+        top: 490px;
+    }
+    .Workout-videos h1 {
+        font-size: 30.24px;
+        margin-top: 08px;
+        margin-left: 15px;
+        letter-spacing: 0.76px;
+    }
+    .Workout-videos p {
+        font-size: 9.83px;
+        margin-top: 3px;
+        margin-left: 15px;
+        letter-spacing: 0.76px;
+    }
+    
+    .video-tutorial {
+        width: 160px;
+        height: 72.58px;
+        left: 32px;
+        top: 800.38px;
+        border: 0.76px solid rgba(255, 255, 255, 0.1);
+        border-radius: 12px;
+        backdrop-filter: blur(15.12px);
+        left: 70px;
+        top: 712px;
+    }
+    .ball {
+        margin-left: 10px;
+    }
+    .video-tutorial h1 {
+        font-size: 18.14px;
+        margin-left: 10px;
+        letter-spacing: 0.23px;
+        margin-bottom: 7px;
+        margin-top: 6px;
+    }
+    
+    .video-tutorial p {
+        font-size: 12.1px;
+        letter-spacing: 0.38px;
+        margin-left: 10px;
+        letter-spacing: 0.5px;
+        margin-bottom: 8px;
+    }
+    /* navbar & banner section responsive ends here */
 }
