--- a/styles/style.css
+++ b/styles/style.css
@@ -705,7 +705,92 @@ td {
     font-weight: 600;
     margin-top: 20px;
 }
-
+/* meet team section style starts here */
+.meet-team-container {
+    width: 77%;
+    height: 782px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px;
+}
+.meet-team-text {
+    margin: 0 auto;
+}
+.meet-team-text h1 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.meet-team-text p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
+.trainers {
+    position: relative;
+    width: 96.4%;
+    height: 585px;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
+.item {
+    width: 350px;
+    height: 272px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+.item img {
+    width: 100%;
+    height: 100%;
+    border-radius: 18px;
+    background: rgba(0, 0, 0, 0.2);
+    margin: 0 auto;
+}
+.trainer-name {
+    position: absolute;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: -5.5%;
+    margin-left: 20px;
+}
+.designation{
+    position: absolute;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: -3%;
+    margin-left: 20px;
+}
 /* Responsive design */
 @media screen and (max-width: 576px) {
     
