--- a/styles/style.css
+++ b/styles/style.css
@@ -742,7 +742,7 @@ td {
 .trainers {
     position: relative;
     width: 96.4%;
-    height: 585px;
+    height: 570px;
     border-radius: 18px;
     background: rgba(255, 255, 255, 0.1);
     display: grid;
@@ -750,8 +750,8 @@ td {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    gap: 20px;
+    padding: 25px 20px 20px 20px;
+    gap: 30px 20px;
 }
 .item {
     width: 350px;
