fitness goals section done

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ body {
     font-weight: 600;
     margin-right: 15px;
     margin-top: 15px;
+    cursor: pointer;
 }
 .banner-btn-1 {
     color: rgb(255, 255, 255);
@@ -322,6 +323,7 @@ body {
     font-size: 18px;
     font-weight: 600;
     margin-top: 20px;
+    cursor: pointer;
 }
 .run-container h1 {
     color: rgb(255, 255, 255);
@@ -515,6 +517,147 @@ body {
     line-height: 17px;
     letter-spacing: 0px;
 }
+/* fitness goals section style starts here */
+.fitness-goals-container {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 125px;
+    margin-bottom: 100px;
+}
+.goals-first-column {
+    width: 50%;
+    margin-right: 2rem;
+}
+.goals-title {
+    width: 30%;
+    background: #222222;
+    border-radius: 5px;
+    padding: 0.50rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 4px 30px 0 rgba(230, 83, 60, 0.6);
+}
+.goals-first-column h5 {
+    color: rgb(230, 83, 60);
+    font-family: Inter;
+    font-size: 25px;
+    font-weight: 700;
+    font-style: italic;
+    margin: 0 auto;
+}
+.goals-first-column h1 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.goals-card {
+    width: 100%;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+    padding: 15px 0px 0px 0px;
+}
+.goals-card:hover {
+    background: #222222;
+}
+.goals-icon {
+    width: 20%;
+    height: 20%;
+    margin: 0 auto;
+    margin-right: 2rem;
+}
+.goals-icon img {
+    width: 100%;
+    height: 100%;
+    object-fit:fill;
+    border-radius: 5px;
+}
+.goals-card h4 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 30px;
+    font-weight: 900;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+.goals-card p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.3px;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 2rem;
+}
+.goals-first-column button {
+    width: 200px;
+    height: 54px;
+    border-radius: 42px;
+    padding: 16px 40px 16px 40px;
+    color: white;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 20px;
+    background: none;
+    border: 2px solid white;
+}
+.goals-first-column button:hover {
+    color: black;
+    background: rgb(230, 83, 60);
+    border: none;
+    cursor: pointer;
+}
+.goals-second-column {
+    position: relative;
+    width: 50%;
+    height: 40rem;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+.goals-second-column img {
+    width: 80%;
+    height: 100%;
+    border-radius: 1.7rem;
+    border: 5px solid #222222;
+}
+.goals-badge {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    right: 0;
+    top: 92px;
+    height: 12.5rem;
+    width: 12.5rem;
+    text-align: center;
+    border-radius: 50%;
+    background: #f41e1e;
+    border: 2px solid white;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff;
+}
+.goals-badge:hover {
+    height: 13.5rem;
+    width: 13.5rem;
+    border: none;
+}
 /* BMI Calculator section style starts here */
 .bmi-container {
     width: 100%;
@@ -707,6 +850,7 @@ td {
     font-size: 18px;
     font-weight: 600;
     margin-top: 20px;
+    cursor: pointer;
 }
 /* meet team section style starts here */
 .meet-team-container {
