--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
 /* navbar style starts here */
 .header-section {
     width: 100%;
-    height: 715px;
+    height: auto;
     background: linear-gradient(to bottom,#141414, #222222, #060606);
     display: flex;
     flex-direction: column;
@@ -80,7 +80,7 @@ body {
 }
 .banner-text-content {
     margin-top: 0;
-    margin-right: 225px;
+    margin-right: 50px;
 }
 .banner-container h1 {
     color: rgb(255, 255, 255);
@@ -134,7 +134,7 @@ body {
 .banner-img {
     width: 349px;
     height: 580px;
-    margin-right: 25px;
+    margin-right: 35px;
 }
 
 .Workout-videos {
@@ -146,8 +146,8 @@ body {
     border-radius: 12px;
     backdrop-filter: blur(20px);
     background: rgba(255, 255, 255, 0.1);
-    left: 80.10%;
-    top: 36%;
+    left: 79.5%;
+    top: 34.4%;
 }
 .Workout-videos h1 {
     color: rgb(255, 255, 255);
@@ -173,8 +173,8 @@ body {
 .video-tutorial {
     width: 206px;
     height: 96px;
-    left: 57.5%;
-    top: 77.8%;
+    left: 57%;
+    top: 77.2%;
     position: absolute;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -520,6 +520,7 @@ body {
 /* fitness goals section style starts here */
 .fitness-goals-container {
     width: 80%;
+    height: auto;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -623,14 +624,14 @@ body {
 .goals-second-column {
     position: relative;
     width: 50%;
-    height: 40rem;
+    height: auto;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
 }
 .goals-second-column img {
     width: 80%;
-    height: 100%;
+    height: 95%;
     border-radius: 1.7rem;
     border: 5px solid #222222;
 }
